fix: layout scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,13 @@ main.row{
 
 .chat_section, .jumbo_message{
     overflow-y: auto;
+    
+}
+
+
+
+.list_contacts{
+    height: 473px;
 }
 
 
